<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="se.isotop.apan1000.lunchtrain.CreateTrainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_margin">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/create_train_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"
                android:scaleType="centerCrop"
                android:src="@drawable/food_train"/>

            <ProgressBar
                android:id="@+id/image_loader"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:visibility="invisible"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/dark_gradient_bg">
            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                android:theme="@style/OnDarkEditTextHint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_img_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_img_url"
                    android:textColor="@color/white"/>
            </android.support.design.widget.TextInputLayout>
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_title"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_description"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:text="11:30"/>

            <Button
                android:id="@+id/submit_train_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubmitTrainButton"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/ic_arrow_forward_white_24dp"
                android:text="@string/action_submit_train"
                android:enabled="false"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
